deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment
  namespace: dev
  labels:
    app: mywebapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mywebapp
      tier: frontend
  template:
    metadata:
      labels:
        app: mywebapp
        tier: frontend
    spec:
      containers:
        - name: mycontainer
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "16Mi"
              cpu: "50m"         # 500milliCPUs (1/2 CPU)
            limits:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
          - name: nginx-configv1
            mountPath: /usr/share/nginx/html
            readOnly: true
        volumes:
        - name: nginx-configv1
          items:
          - key: index.html
            path: index.html
